Feature Transformer and Attentive Transformer architectures Implemented

--- a/Tabnet_Paper.ipynb
+++ b/Tabnet_Paper.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Tabnet-Paper.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPlfBmZpoU7esec6EYTRarh",
+      "authorship_tag": "ABX9TyPJwkhusN5TiwFenb/+Xthu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,8 @@
         "import torch\n",
         "import pandas as pd\n",
         "import matplotlib as plt\n",
-        "from torch.nn import Linear, ReLU, BatchNorm1d"
+        "from torch.nn import Linear, ReLU, BatchNorm1d\n",
+        "import torch.nn.functional.glu as GLU"
       ],
       "execution_count": 1,
       "outputs": []
@@ -71,7 +72,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 338
+          "height": 202
         },
         "id": "NuHTMWFQPDOn",
         "outputId": "41c1fb12-4bcc-4eab-b970-51380918b93d"
@@ -508,7 +509,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 318
+          "height": 202
         },
         "id": "NN8iv6KwRDwd",
         "outputId": "7c9a5621-bdc0-4fbc-d037-9102170ec9d3"
@@ -730,17 +731,108 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "4cm1Dp4kcAdO"
+      },
+      "source": [
+        "# Feature Transformer class\n",
+        "\n",
+        "class FeatureTransformer(nn.Module):\n",
+        "    def __init__(self):\n",
+        "      super(self).__init__()\n",
+        "\n",
+        "      # A class implementing the feature transformer architecture as seen in the paper page 4 (https://arxiv.org/pdf/1908.07442.pdf)\n",
+        "      self.model = torch.nn.Sequential(*[\n",
+        "          # First fully connected layer\n",
+        "          self.fc = nn.Linear(500, 256)\n",
+        "          # BatchNorm Layer\n",
+        "          self.bn = nn.BatchNorm2d(100)  # BN Layer With Learnable Parameters\n",
+        "          # Gated linear unit (GLU) Layer\n",
+        "          nn.GLU()\n",
+        "      ])\n",
+        "\n",
+        "    def forward(self, input):\n",
+        "      output = self.model(input)\n",
+        "      return output\n",
+        "    \n",
+        "    # Shared Accross Decision step\n",
+        "    output = self.forward(inputs)\n",
+        "    output1 = output\n",
+        "    output_part_2 = self.forward(output)\n",
+        "    output2 = output1 + output_part_2\n",
+        "    output2 = output2 / np.sqrt(0.5)\n",
+        "\n",
+        "    # Decision step dependent\n",
+        "    output_part_3 = self.forward(output2)\n",
+        "    output3 = output2 + output_part_3\n",
+        "    output3 = output3 / np.sqrt(0.5)\n",
+        "\n",
+        "    output_part_4 = self.forward(output3)\n",
+        "    output4 = output3 + output_part_4\n",
+        "    output4 = output4 / np.sqrt(0.5)\n",
+        "\n",
+        "\n",
+        "ft = FeatureTransformer()\n",
+        "#print(ft)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "spA_xfZCb_9F"
       },
       "source": [
-        "def sparse_max():\n",
+        "# Attentive Transformer\n",
         "\n",
+        "class AttentiveTransformer(nn.Module):\n",
+        "    def __init__(self):\n",
+        "      super(self).__init__()\n",
         "\n",
+        "      # A class implementing the feature transformer architecture as seen in the paper page 4 (https://arxiv.org/pdf/1908.07442.pdf)\n",
+        "      \n",
+        "      # First fully connected layer\n",
+        "      self.fc = nn.Linear(500, 256)\n",
+        "      # BatchNorm Layer\n",
+        "      self.bn = nn.BatchNorm2d(100)  # BN Layer With Learnable Parameters  \n",
         "\n",
+        "    def sparseMax(inputs):\n",
+        "      pass  \n",
         "\n",
-        "def glu():\n",
+        "    def forward(self, input, prior):\n",
+        "      output = self.fc(input)\n",
+        "      output = self.bn(output)\n",
+        "      output = torch.mul(output, prior)\n",
+        "      output = sparseMax(output)\n",
         "\n",
-        "  "
+        "      prior = output\n",
+        "\n",
+        "      return output, prior\n",
+        "\n",
+        "at = AttentiveTransformer()\n",
+        "#print(at)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yjQM7F4xetDd"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d6Y38-zNetv_"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -751,7 +843,7 @@
         "id": "AEylaBcNcAQ0"
       },
       "source": [
-        "Class tabnet_encoder(torch.nn.Module):\n",
+        "Class TabnetEncoder(torch.nn.Module):\n",
         "\n",
         "\n",
         "\n",
@@ -775,23 +867,12 @@
         "id": "99voskM8cAIO"
       },
       "source": [
-        "Class tabnet_decoder(torch.nn.Module):\n",
+        "Class TabNetDecoder(torch.nn.Module):\n",
         "\n",
         "\n",
         "## Feature transformer method\n",
         "self.feature_transformer():\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4cm1Dp4kcAdO"
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
