Feature Transformer and Attentive Transformer v2

--- a/Tabnet_Paper.ipynb
+++ b/Tabnet_Paper.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Tabnet-Paper.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPJwkhusN5TiwFenb/+Xthu",
+      "authorship_tag": "ABX9TyPBzilnYcsBE8hvTB5r+KBr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -737,15 +737,15 @@
         "# Feature Transformer class\n",
         "\n",
         "class FeatureTransformer(nn.Module):\n",
-        "    def __init__(self):\n",
+        "    def __init__(self, input_dim, output_dim):\n",
         "      super(self).__init__()\n",
         "\n",
         "      # A class implementing the feature transformer architecture as seen in the paper page 4 (https://arxiv.org/pdf/1908.07442.pdf)\n",
         "      self.model = torch.nn.Sequential(*[\n",
         "          # First fully connected layer\n",
-        "          self.fc = nn.Linear(500, 256)\n",
+        "          self.fc = nn.Linear(self, input_dim, output_dim)\n",
         "          # BatchNorm Layer\n",
-        "          self.bn = nn.BatchNorm2d(100)  # BN Layer With Learnable Parameters\n",
+        "          self.bn = nn.BatchNorm2d(output_dim)  # BN Layer With Learnable Parameters\n",
         "          # Gated linear unit (GLU) Layer\n",
         "          nn.GLU()\n",
         "      ])\n",
@@ -786,15 +786,15 @@
         "# Attentive Transformer\n",
         "\n",
         "class AttentiveTransformer(nn.Module):\n",
-        "    def __init__(self):\n",
+        "    def __init__(self, self, input_dim, output_dim):\n",
         "      super(self).__init__()\n",
         "\n",
         "      # A class implementing the feature transformer architecture as seen in the paper page 4 (https://arxiv.org/pdf/1908.07442.pdf)\n",
         "      \n",
         "      # First fully connected layer\n",
-        "      self.fc = nn.Linear(500, 256)\n",
+        "      self.fc = nn.Linear(input_dim, output_dim)\n",
         "      # BatchNorm Layer\n",
-        "      self.bn = nn.BatchNorm2d(100)  # BN Layer With Learnable Parameters  \n",
+        "      self.bn = nn.BatchNorm2d(output_dim)  # BN Layer With Learnable Parameters  \n",
         "\n",
         "    def sparseMax(inputs):\n",
         "      pass  \n",
