Label encoding iterated

--- a/Tabnet_Paper.ipynb
+++ b/Tabnet_Paper.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Tabnet-Paper.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPBzilnYcsBE8hvTB5r+KBr",
+      "authorship_tag": "ABX9TyMC2eP5EI8n8LxcE4vJTV2G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -509,7 +509,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 202
+          "height": 318
         },
         "id": "NN8iv6KwRDwd",
         "outputId": "7c9a5621-bdc0-4fbc-d037-9102170ec9d3"
@@ -704,26 +704,55 @@
         "id": "FYTmFoZWfkgZ"
       },
       "source": [
-        "## LABEL ENCODING\n",
-        "# convert categorical features to variables 0, 1, 2 etc. \n",
+        "# ## LABEL ENCODING\n",
+        "# # convert categorical features to variables 0, 1, 2 etc. \n",
         "\n",
-        "from sklearn import preprocessing\n",
-        "# Reset target\n",
-        "le_earn = preprocessing.LabelEncoder()\n",
-        "le_earn.fit([' <=50K',' >50K'])   # reset earn to 0 and 1\n",
-        "y[:,0] = le_earn.transform(y[:,0]) \n",
+        "# from sklearn import preprocessing\n",
+        "# # Reset target\n",
+        "# le_earn = preprocessing.LabelEncoder()\n",
+        "# le_earn.fit([' <=50K',' >50K'])   # reset earn to 0 and 1\n",
+        "# y[:,0] = le_earn.transform(y[:,0]) \n",
         "\n",
         "\n",
-        "# Transform work\n",
-        "le_work = preprocessing.LabelEncoder()\n",
-        "le_work.fit([' Self-emp-not-inc', ' Private', ' State-gov',' Federal-gov', ' Local-gov', ' ?', ' Self-emp-inc', ' Without-pay', ' Never-worked'])\n",
-        "X[:,1] = le_work.transform(X[:,1])\n",
+        "# # Transform work\n",
+        "# le_work = preprocessing.LabelEncoder()\n",
+        "# le_work.fit([' Self-emp-not-inc', ' Private', ' State-gov',' Federal-gov', ' Local-gov', ' ?', ' Self-emp-inc', ' Without-pay', ' Never-worked'])\n",
+        "# X[:,1] = le_work.transform(X[:,1])\n",
         "\n",
-        "# Transform Education\n",
-        "le_edu = preprocessing.LabelEncoder()\n",
-        "le_edu.fit([' Bachelors', ' HS-grad',' 11th', ' Masters', ' 9th', ' Some-college', ' Assoc-acdm',' Assoc-voc',' 7th-8th',' Doctorate',' Prof-school', ' 5th-6th',' 10th',' 1st-4th',' Preschool',' 12th'])\n",
-        "X[:,3] = le_work.transform(X[:,3])\n",
+        "# # Transform Education\n",
+        "# le_edu = preprocessing.LabelEncoder()\n",
+        "# le_edu.fit([' Bachelors', ' HS-grad',' 11th', ' Masters', ' 9th', ' Some-college', ' Assoc-acdm',' Assoc-voc',' 7th-8th',' Doctorate',' Prof-school', ' 5th-6th',' 10th',' 1st-4th',' Preschool',' 12th'])\n",
+        "# X[:,3] = le_work.transform(X[:,3])\n",
         "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hRj2_TokEdFp"
+      },
+      "source": [
+        "### Preprocessing\n",
+        "\n",
+        "nunique = train.nunique()\n",
+        "types = train.dtypes\n",
+        "\n",
+        "categorical_columns = []\n",
+        "categorical_dims = {}\n",
+        "\n",
+        "## Label Encoding\n",
+        "for col in train.columns:\n",
+        "    if types[col] == 'object' or nunique[col] < 200:\n",
+        "        print(col, train[col].nunique())\n",
+        "        l_enc = LabelEncoder()\n",
+        "        train[col] = train[col].fillna(\"VV_likely\")\n",
+        "        train[col] = l_enc.fit_transform(train[col].values)\n",
+        "        categorical_columns.append(col)\n",
+        "        categorical_dims[col] = len(l_enc.classes_)\n",
+        "    else:\n",
+        "        train.fillna(train.loc[train_indices, col].mean(), inplace=True)"
       ],
       "execution_count": null,
       "outputs": []
@@ -786,7 +815,7 @@
         "# Attentive Transformer\n",
         "\n",
         "class AttentiveTransformer(nn.Module):\n",
-        "    def __init__(self, self, input_dim, output_dim):\n",
+        "    def __init__(self, input_dim, output_dim):\n",
         "      super(self).__init__()\n",
         "\n",
         "      # A class implementing the feature transformer architecture as seen in the paper page 4 (https://arxiv.org/pdf/1908.07442.pdf)\n",
@@ -795,6 +824,8 @@
         "      self.fc = nn.Linear(input_dim, output_dim)\n",
         "      # BatchNorm Layer\n",
         "      self.bn = nn.BatchNorm2d(output_dim)  # BN Layer With Learnable Parameters  \n",
+        "      # Sparsemax\n",
+        "      self.smax = Sparsemax()\n",
         "\n",
         "    def sparseMax(inputs):\n",
         "      pass  \n",
@@ -818,6 +849,33 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "AEylaBcNcAQ0"
+      },
+      "source": [
+        "class TabnetEncoder(torch.nn.Module):\n",
+        "  def __init__(self, input_dim, output_dim, epsilon):\n",
+        "    super(self).__init__()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "## Feature transformer method\n",
+        "self.feature_transformer():\n",
+        "\n",
+        "\n",
+        "## Attentive transformer method\n",
+        "self.attentive_transformer():\n",
+        "\n",
+        "\n",
+        "## Feature Masking method\n",
+        "self.feature_masking():\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "yjQM7F4xetDd"
       },
       "source": [
@@ -833,30 +891,6 @@
       },
       "source": [
         ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "AEylaBcNcAQ0"
-      },
-      "source": [
-        "Class TabnetEncoder(torch.nn.Module):\n",
-        "\n",
-        "\n",
-        "\n",
-        "## Feature transformer method\n",
-        "self.feature_transformer():\n",
-        "\n",
-        "\n",
-        "## Attentive transformer method\n",
-        "self.attentive_transformer():\n",
-        "\n",
-        "\n",
-        "## Feature Masking method\n",
-        "self.feature_masking():\n"
       ],
       "execution_count": null,
       "outputs": []
